# linear-cycle-drain

./: .gitignore  AGENTS.md  README.md  pyproject.toml
03/ceb7484945/: metadata.json
0a/5abb6ad479/: metadata.json
0b/1a46b4ade9/: metadata.json
0f/a61b6a2e9a/: metadata.json
13/3b490c862b/: metadata.json
1b/f821d485d5/: metadata.json
22/ace2c2e55c/: metadata.json
24/3cffbd34b6/: metadata.json
2c/af81714ca8/: metadata.json
30/f83e2e8920/: metadata.json
38/cffc805118/: metadata.json
55/ec74d83384/: metadata.json
docs/: design-decisions.md  integration-test-architecture.html  integration-test-architecture.md  limits.example.yml  repos.example.yml  spike-aba-300.md
drain_cycle/: cli.py  grade.py  limits.py  linear.py  model.py  orchestrator.py  progress.py  prompt.py  repos.py  runlog.py  status.py  telemetry.py  worker.py  worktree.py
tests/: test_cli.py  test_grade_across_cycles.py  test_grade_per_cycle.py  test_grade_verdict.py  test_grade_walking_skeleton.py  test_limits.py  test_linear_pending_issues.py  test_linear_set_state.py  test_linear_sort.py  test_model.py  test_orchestrator_cycle_halt.py  test_orchestrator_cycle_limit.py  test_orchestrator_halt.py  test_orchestrator_iteration.py  test_orchestrator_marker.py  test_orchestrator_multi_repo.py  test_orchestrator_resume.py  test_orchestrator_runlog.py  test_orchestrator_set_state.py  test_orchestrator_teardown.py  test_orchestrator_watch.py  test_progress.py  test_prompt.py  test_repos.py  test_runlog.py  test_status.py  test_telemetry.py  test_worker.py  test_worktree.py
(+177 files in other folders)
