[project]
name = "drain-cycle"
version = "0.1.0"
description = "Unattended execution of a Linear cycle: one invocation drains the current cycle's Todo/Backlog issues, each in an isolated worktree under a fresh claude -p session."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
drain-cycle = "drain_cycle.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["drain_cycle"]
